배치 서비스 (매출 정산, 관람객 정산), 예매-상품결제 현황, 사용코드, FAQ